=== HEAD

* Attempt to detect more disconnect errors in the mysql2 adapter (jeremyevans)

* Add is_current? and check_current to the migrators, for checking/raising if there are unapplied migrations (pvh, jeremyevans) (#487)

* Add a jdbc subadapter for the Progress database (Michael Gliwinski, jeremyevans)

* Add pg_inet extension, for working with PostgreSQL inet and cidr types (jeremyevans)

* Fix bug in model column setters when passing an object that raises an exception for ==('') (jeremyevans)

* Add eager_each plugin, which makes each on an eagerly loaded dataset do eager loading (jeremyevans)

* Fix bugs when parsing foreign keys for tables with explicit schema on PostgreSQL (jeremyevans)

* Remove Database#case_sensitive_like on SQLite (jeremyevans)

* Remove Database#single_value in the native sqlite adapter (jeremyevans)

* Make Dataset#get work with nil and false arguments (jeremyevans)

* Make json_serializer plugin respect :root=>:collection and :root=>:instance options (jeremyevans)

* Support savepoints in prepared transactions on MySQL 5.5.23+ (jeremyevans)

* Add pg_json extension, for working with PostgreSQL 9.2's new json type (jeremyevans)

* In the optimistic locking plugin, make refresh and save after a failed save work correctly (jeremyevans)

* Support partial indexes on Microsoft SQL Server 2008 (jeremyevans)

* Make Database#call pass blocks (jeremyevans)

* Support :each when preparing statements, useful for iterating over large datasets (jeremyevans)

* Support :if_exists and :cascade options when dropping indexes on PostgreSQL (jeremyevans)

* Support :concurrently option when adding and dropping indexes on PostgreSQL (jeremyevans)

* Make Database#transaction on PostgreSQL accept a :synchronous option to change synchronous_commit setting for that transaction (jeremyevans)

* Support :sql_mode option when connecting to MySQL (jeremyevans)

* Apply :timeout MySQL connection setting on do, jdbc, and swift adapters (jeremyevans)
